--- a/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
+++ b/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
@@ -61,7 +61,8 @@
     <PackageReference Include="Tingle.EventBus.Transports.Azure.QueueStorage" Version="0.23.1" />
     <PackageReference Include="Tingle.EventBus.Transports.Azure.ServiceBus" Version="0.23.1" />
     <PackageReference Include="Tingle.EventBus.Transports.InMemory" Version="0.23.1" />
-    <PackageReference Include="Tingle.Extensions.Primitives" Version="5.0.1" />
+    <PackageReference Include="Tingle.Extensions.Logging" Version="5.1.1" />
+    <PackageReference Include="Tingle.Extensions.Primitives" Version="5.1.1" />
   </ItemGroup>
 
   <ItemGroup>
