Modularize the project purge/cleaner logic
This makes it easier to maintain and test. Also easier for anyone else to add new resources the list.

--- a/Tingle.AzureCleaner.Tests/Tingle.AzureCleaner.Tests.csproj
+++ b/Tingle.AzureCleaner.Tests/Tingle.AzureCleaner.Tests.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MartinCostello.Logging.XUnit.v3" Version="0.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="9.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
